<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/user"
android:layout_width="match_parent"
android:layout_height="210dp"
android:background="#ffffff"
android:stretchColumns="*">
<TableRow android:id="@+id/row1" android:layout_marginBottom="5dp"
    android:layout_height="0dp"
    android:layout_weight="1">
    <LinearLayout android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_margin="2dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/image_shape_radius"
            android:gravity="center_horizontal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/indexName1"/>

    </LinearLayout>
    <LinearLayout android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_margin="2dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/image_shape_radius"
            android:gravity="center_horizontal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/indexName2"/>

    </LinearLayout>
    <LinearLayout android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_margin="2dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/image_shape_radius"
            android:gravity="center_horizontal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/indexName3"/>

    </LinearLayout>
    <LinearLayout android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_margin="2dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/image_shape_radius"
            android:gravity="center_horizontal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/indexName4"/>

    </LinearLayout>

</TableRow>
<TableRow android:id="@+id/row2" android:layout_marginBottom="5dp"
    android:layout_height="0dp"
    android:layout_weight="1">
    <LinearLayout android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_margin="2dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/image_shape_radius"
            android:gravity="center_horizontal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/indexName5"/>

    </LinearLayout>
    <LinearLayout android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_margin="2dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/image_shape_radius"
            android:gravity="center_horizontal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/indexName6"/>

    </LinearLayout>
    <LinearLayout android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/image_shape_radius"
            android:gravity="center_horizontal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/indexName7"/>

    </LinearLayout>
    <LinearLayout android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/image_shape_radius"
            android:gravity="center_horizontal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/indexName8"/>

    </LinearLayout>

</TableRow>
</TableLayout>
